--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: All Free Tricks
 description: > 
   Here you will get all type of Free Tricks including Mobile Recharge Tricks, Apps Rewards, Free Internet and Computer Tricks.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.allfreetricks.com" # the base hostname & protocol for your site
+url: "https://www.allfreetricks.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
