--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: All Free Tricks
 description: > 
-  Here you will get all type of Free Tricks including Mobile Recharge Tricks, Apps Rewards, Free Internet and Computer Tricks.
+  Welcome to All Free Tricks, Here you will get all internet and mobile recharge offers, coupons, app rewards any many more tricks. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.allfreetricks.com" # the base hostname & protocol for your site
 
